Todo:
- Move VibroColors to a class (don't calculate in every tool).
- Autosave in every 1 min.
- Configurable autosave interval.


2023.02.19
- PutCEL now works as intended.
- PutCEL respects the state of (K) button.

2023.02.17
- Created a logo font, it is used in the splash screen.
- Added icon.
- GetCEL now stores position too.
- Pressing ESC or ` when in GetCEL or PutCEL cancels curent operation.
- Image position saved into BDP file. (Needed in CEL)
- PutCEL almost works as expected. Only thing is missing putting the CEL onto the image.

2023.02.16
- Pressing ` (the key below ESC) invokes PUTCel. It doesn't work fully, you can
  just move the picked CEL image around with the mouse, until you quit.
  Cannot continue now, I drank a beer and cannot concentrate anymore. :)

2023.02.15
- Added color selector to controls.
- Added selected colors to Settings, so they are saved on exit and loaded on startup.
- Clicking on color selector selects the clicked color.
- The selected color is used when Opaque ink is selected.
- The selected color is saved into Settings.
- On startup the color selector selects the box that contains the color saved in Settings.

2023.02.14
- Small bugfix in writing color index under cursor.
- Removed (A) button. Has no meaning with paletted mode.

2023.02.13
- Bugfix with clickin anomaly. Click was on mouseup in TMouseObject, but was
  on mousedown in TDrawArea. Changed it in TDrawArea.

2023.02.12
- GETCEL really copies the selected area into CELImage.
  (It saves it to a PNG on exit, to be sure.)
- CEL is saved on exit and reloaded on startup.
- BUG narrowed down: The colored line appears only in PNG file and
  only with odd width. So the bug is in the PNG writer.
- BUG fixed: Writing paletted images with odd with and 4, 2 or 1 bitdepth was
  bugged. (Had to move the bit shift operations after adding the color bits.)

2023.02.10
- Added Pinnable property to tools, to differentiate between tools that can be