@@ -20,8 +20,8 @@ PutCEL=53
 
 [DrawArea]
 Zoom=3
-ZoomLeft=-12
-ZoomTop=30
+ZoomLeft=-13
+ZoomTop=29
 
 [BasicControls]
 Tool0=DRAW
