@@ -1,12 +1,13 @@
 Todo:
-- Move VibroColors to a class (don't calculate in every tool).
 - Autosave in every 1 min.
 - Configurable autosave interval.
+- Fix: TBDPalette.CopyColorFrom ignores start and count.
 
 
 2023.02.19
 - PutCEL now works as intended.
 - PutCEL respects the state of (K) button.
+- Vibrocolors is now a class, and changes colors based on ticks instead of program loops.
 
 2023.02.17
 - Created a logo font, it is used in the splash screen.
